# CoverCraft

./: .gitignore  README.md  latex_template.txt  main.py  pyproject.toml  ui.py
cover_letters_latex/: settings.sty
